--- a/Sources/OpenApiToCSharpGenerator/Settings.settings
+++ b/Sources/OpenApiToCSharpGenerator/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="Template" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PathToGeneratedEnums" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
